-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.0.0, Lustre 2.1.0
-
None
-
3
-
4560
In Lustre MDT changelog, rename operations are splitted in 2 lines CL_RENAME (displayed as RNMFM) and CL_EXT (displayed as RNMTO).
I found some case where those 2 records are not consecutive in the changelog: other operations are inserted between them.
example:
14989521 08RNMFM 03:09:52.275492602 2012.04.14 0x0 t=[0x20000b8d3:0xaae6:0x0] p=[0x20000b7ba:0x4b4c:0x0] .adcread.q6TIXm
14989522 14SATTR 03:09:52.275492602 2012.04.14 0x14 t=[0x20000b7bb:0x1c1e:0x0]
14989523 09RNMTO 03:09:52.275492602 2012.04.14 0x0 t=[0:0x0:0x0] p=[0x20000b7ba:0x4b4c:0x0] adcread
Looking at lustre_rsync code, it seems CL_RENAME and CL_EXT are expected to be consecutive.
So there are 2 options:
- lustre_rsync does a bad asumption about that
or - there is a locking or transaction issue when generating CL rename records which allows another operation to be logged in between
Given that CL_EXT is an extra info related to CL_RENAME, it would be easier if they are together in the log...