LU-1331 changelog: allow changelog to extend record

Previously rename is split into two records, this isn't natural and
makes replication hard because rename needs two records, but they may
not be consecutive.

To solve this, allow Changelog to extend record, add one field spfid in
changelog record to store source parent fid, and pack both source
(if has) and target name into the record.

Added two flags:
* CLF_RENAME_LAST rename unlink of last hardlink of the target.
* CLF_RENAME_EXISTS rename target exists.

Signed-off-by: Lai Siyao <laisiyao@whamcloud.com>
Change-Id: I97b990687726e45e661cfb11609f80132c84825d